--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -22,6 +22,8 @@
     "@angular/router": "^15.1.0",
     "@ngx-translate/core": "^14.0.0",
     "@ngx-translate/http-loader": "^7.0.0",
+    "angular-material-rail-drawer": "^2.0.0",
+    "ngx-otp-input": "^0.11.4",
     "ngx-toastr": "^16.1.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
